--- a/src/pages/PageNotFound/PageNotFound.module.scss
+++ b/src/pages/PageNotFound/PageNotFound.module.scss
@@ -7,15 +7,16 @@
 
   &__title {
     @include font(140px, 169px, 400);
+
     text-align: center;
     margin: 0;
     padding-top: 100px;
 
-    @media (max-width: 770px) {
+    @media (width <= 770px) {
       padding-top: 100px;
     }
 
-    @media (max-width: 550px) {
+    @media (width <= 550px) {
       font-size: 80px;
       line-height: 97px;
       padding-top: 100px;
@@ -24,6 +25,7 @@
 
   &__text {
     @include font(16px, 19px, 400);
+
     text-align: center;
     margin: 0;
     padding-top: 5px;
@@ -32,7 +34,7 @@
       padding-bottom: 50px;
     }
 
-    @media (max-width: 550px) {
+    @media (width <= 550px) {
       font-size: 12px;
       line-height: 15px;
     }
@@ -40,6 +42,7 @@
 
   &__link {
     @include font(14px, 17px, 400);
+
     text-align: center;
     margin: 0;
     text-decoration: none;
@@ -49,33 +52,15 @@
       @include hovered;
     }
 
-    @media (max-width: 550px) {
+    @media (width <= 550px) {
         padding-top: 84px;
       }
     }
 
   &__arrowContainerTop {
     @include column;
+
     align-items: center;
-  }
-
-  &__text {
-    @include font(20px, 1.3, 400);
-    margin: 0;
-    color: $color-font-darkgrey;
-    white-space: nowrap;
-  
-    &:hover {
-      @include hovered;
-    }
-
-    @media (max-width: 740px) {
-      font-size: 16px;
-    }
-
-    @media (max-width: 640px) {
-      font-size: 12px;
-    }
   }
 
   &__arrow {
@@ -86,7 +71,7 @@
       @include hovered;
     }
   
-    @media (max-width: 740px) {
+    @media (width <= 740px) {
       width: 50px;
       height: 25px;
     }
