--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$font-sans: "Inter", sans-serif;
+$font-sans: 'Inter', sans-serif;
 $color-background: #fff;
 $color-background-header: #a09c9c;
 $color-background-footer: #d2d2d2;
