--- a/src/components/CardsHolder/CardsHolder.module.scss
+++ b/src/components/CardsHolder/CardsHolder.module.scss
@@ -1,7 +1,8 @@
-@import "../../styles/variables";
+@import '../../styles/variables';
 
 .cardsHolder {
   @include column;
+
   justify-items: center;
   position: relative;
   padding: 32px 0 100px;
@@ -9,54 +10,55 @@
   min-height: 400px;
   margin-right: auto;
   margin-left: auto;
-  
-  @media (max-width: 900px) {
+
+  @media (width <= 900px) {
     padding: 32px 0;
   }
 
-  @media (max-width: 820px) {
+  @media (width <= 820px) {
     margin: 0;
   }
 
-  @media (max-width: 650px) {
+  @media (width <= 650px) {
     padding: 32px 14px;
   }
 
-  @media (max-width: 386px) {
+  @media (width <= 386px) {
     padding: 20px 10px;
   }
 
   &__form {
     @include column;
+
     position: relative;
     gap: 20px;
     padding-bottom: 50px;
 
-    @media (max-width: 720px) {
+    @media (width <= 720px) {
       gap: 12px;
     }
   }
 
   &__input {
-  display: block;
-  height: 80px;
-  min-width: 600px;
-  border-radius: 20px;
-  padding-left: 20px;
-  background-color: $color-input;
-  border: 0.5px solid $color-border-input;
-  box-sizing: border-box;
-  font-size: 26px;
+    display: block;
+    height: 80px;
+    min-width: 600px;
+    border-radius: 20px;
+    padding-left: 20px;
+    background-color: $color-input;
+    border: 0.5px solid $color-border-input;
+    box-sizing: border-box;
+    font-size: 26px;
 
-    @media (max-width: 720px) {
+    @media (width <= 720px) {
       min-width: 478px;
     }
-  
-    @media (max-width: 570px) {
+
+    @media (width <= 570px) {
       padding-left: 15px;
     }
-  
-    @media (max-width: 540px) {
+
+    @media (width <= 540px) {
       max-width: 85vw;
       min-width: 85vw;
       height: 60px;
@@ -79,18 +81,19 @@
 
   &__buttonBlock {
     @include row;
+
     justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
 
-    /*@media (max-width: 720px) {
+    /* @media (max-width: 720px) {
       button {
         max-width: 210px;
         min-width: 210px;
       }
-    }*/
-    
-    @media (max-width: 630px) {
+    } */
+
+    @media (width <= 630px) {
       gap: 30px;
       padding-top: 12px;
 
@@ -98,8 +101,8 @@
         width: 50%;
       }
     }
-    
-    @media (max-width: 530px) {
+
+    @media (width <= 530px) {
       flex-direction: column;
       width: 85vw;
       gap: 30px;
@@ -107,7 +110,7 @@
       align-items: center;
     }
 
-    @media (max-width: 530px) {
+    @media (width <= 530px) {
       width: 100%;
       max-width: 100%;
       min-width: 250px;
@@ -116,6 +119,7 @@
 
   &__titleRow {
     @include row;
+
     justify-content: space-between;
     width: 100%;
     flex-wrap: wrap;
@@ -124,10 +128,11 @@
 
   &__title {
     @include font(24px, 27px, 400);
+
     margin: 0;
     font-weight: 500;
 
-    @media (max-width: 650px) {
+    @media (width <= 650px) {
       font-size: 22px;
       line-height: 22px;
     }
@@ -135,6 +140,7 @@
 
   &__hint {
     @include font(22px, 27px, 400);
+
     margin: 0;
     padding-bottom: 23px;
     color: $color-font-grey;
@@ -146,6 +152,7 @@
 
   &__answer {
     @include column;
+
     height: 30px;
     max-width: 600px;
   }
@@ -161,12 +168,12 @@
 
   &__arrowContainer {
     @include column;
-    justify-content: flex-end;
+
+    place-content: center flex-end;
     position: relative;
     flex-wrap: wrap;
     align-items: center;
     width: 200px;
-    align-content: center;
     align-self: center;
     margin-bottom: 20px;
   }
@@ -181,14 +188,13 @@
   }
 
   &__text {
-    
-    @media (max-width: 770px) {
+    @media (width <= 770px) {
       font-size: 14px;
       line-height: 22px;
       max-width: 364px;
     }
-    
-    @media (max-width: 650px) {
+
+    @media (width <= 650px) {
       padding-right: 0;
       font-size: 11px;
       line-height: 16px;
