--- a/src/components/LettersTrainMode/LettersTrainMode.module.scss
+++ b/src/components/LettersTrainMode/LettersTrainMode.module.scss
@@ -1,23 +1,22 @@
-@import "../../styles/variables";
+@import '../../styles/variables';
 
 .trainScreenChoises {
   @include column;
 
   justify-items: center;
   position: relative;
-  max-width: 1140px;
   min-height: 400px;
   margin-right: auto;
   margin-left: auto;
   padding: 32px 0;
   min-width: 300px;
   max-width: 600px;
-  
-  @media (max-width: 900px) {
+
+  @media (width <= 900px) {
     padding: 32px 0;
   }
 
-  @media (max-width: 386px) {
+  @media (width <= 386px) {
     padding: 20px 0;
     min-width: calc(100vw - 60px);
   }
@@ -30,9 +29,9 @@
     gap: 28px;
     padding-bottom: 50px;
 
-    @media (max-width: 548px) {
+    @media (width <= 548px) {
       gap: 0;
-      
+
       //переходим с гэпов на марджины ради браузеров на старых айфонах
       & * {
         margin-bottom: 20px;
@@ -48,7 +47,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
 
-    @media (max-width: 470px) {
+    @media (width <= 470px) {
       justify-content: space-evenly;
     }
   }
@@ -60,11 +59,10 @@
     border: 1px solid $color-border-grey;
     padding: 8px;
     border-radius: 16px;
-    min-width: 90px;
     text-align: center;
     min-width: 40%;
 
-    @media (max-width: 650px) {
+    @media (width <= 650px) {
       font-size: 22px;
       line-height: 22px;
       min-width: 40%;
@@ -74,16 +72,18 @@
   &__answer_hovered {
     &:hover {
       @include hovered;
+
       background-color: $color-button-hovered;
     }
   }
 
   &__disabledAnswer {
     @include font(24px, 27px, 500);
+
     opacity: 0.7;
     margin: 0;
 
-    @media (max-width: 650px) {
+    @media (width <= 650px) {
       font-size: 22px;
       line-height: 22px;
       min-width: 40%;
@@ -92,17 +92,17 @@
 
   &__buttonBlock {
     @include row;
+
     gap: 20px;
     max-width: 600px;
     width: 100%;
 
-    @media (max-width: 548px) {
+    @media (width <= 548px) {
       gap: 0;
     }
 
-    @media (max-width: 550px) {
+    @media (width <= 550px) {
       flex-direction: column;
-      width: 85vw;
       align-items: center;
       width: 100%;
       max-width: 100%;
@@ -118,27 +118,26 @@
   border: 0.5px solid $color-border-grey;
   min-width: 160px;
   min-height: 80px;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   padding: 20px;
   margin: 0 5px;
   display: flex;
-  flex-direction: column;
   width: fit-content;
   overflow: hidden;
   gap: 6px;
   align-items: center;
-  
-  @media (max-width: 790px) {
+
+  @media (width <= 790px) {
     padding: 20px 12px;
   }
 
-  @media (max-width: 548px) {
+  @media (width <= 548px) {
     min-width: 140px;
     padding: 20px 8px;
     margin: 0 0 20px;
   }
 
-  @media (max-width: 390px) {
+  @media (width <= 390px) {
     max-width: 120px;
     padding: 16px 6px;
   }
@@ -151,13 +150,13 @@
     font-size: 26px;
     color: $color-font-darkgrey;
     text-align: center;
-    
-    @media (max-width: 490px) {
+
+    @media (width <= 490px) {
       line-height: 20px;
       font-size: 18px;
     }
-  
-    @media (max-width: 390px) {
+
+    @media (width <= 390px) {
       font-size: 16px;
     }
   }
@@ -170,7 +169,7 @@
     font-size: 15px;
     color: $color-font-grey;
     text-align: center;
-  
+
     &:hover {
       @include hovered;
     }
@@ -187,8 +186,8 @@
     width: 100%;
     border: 2px solid transparent;
     min-height: 30px;
-  
-    @media (max-width: 390px) {
+
+    @media (width <= 390px) {
       font-size: 14px;
       line-height: 26px;
       margin: 6px 0;
