--- a/src/components/WordCard/WordCard.module.scss
+++ b/src/components/WordCard/WordCard.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables";
+@import '../../styles/variables';
 
 @keyframes rotate {
   from {
@@ -17,28 +17,27 @@
   border: 0.5px solid $color-border-grey;
   min-width: 160px;
   min-height: 80px;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   padding: 20px;
   margin: 5px;
   display: flex;
-  flex-direction: column;
   max-width: 240px;
   width: fit-content;
   overflow: hidden;
   gap: 6px;
   align-items: center;
-  
-  @media (max-width: 790px) {
+
+  @media (width <= 790px) {
     max-width: 220px;
     padding: 20px 12px;
   }
 
-  @media (max-width: 490px) {
+  @media (width <= 490px) {
     min-width: 120px;
     padding: 20px 8px;
   }
 
-  @media (max-width: 390px) {
+  @media (width <= 390px) {
     max-width: 120px;
     padding: 16px 6px;
     margin: 3px;
@@ -51,7 +50,8 @@
 
     &:hover {
       @include hovered;
-      filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 0.9));
+
+      filter: drop-shadow(-10px 4px 4px rgba(0 0 0 / 90%));
     }
   }
 }
@@ -64,13 +64,13 @@
   font-size: 26px;
   color: $color-font-darkgrey;
   text-align: center;
-  
-  @media (max-width: 490px) {
+
+  @media (width <= 490px) {
     line-height: 20px;
     font-size: 18px;
   }
 
-  @media (max-width: 390px) {
+  @media (width <= 390px) {
     font-size: 16px;
   }
 }
@@ -84,13 +84,13 @@
   color: $color-font-darkgrey;
   text-align: center;
   width: min-content;
-  
-  @media (max-width: 490px) {
+
+  @media (width <= 490px) {
     line-height: 20px;
     font-size: 18px;
   }
 
-  @media (max-width: 390px) {
+  @media (width <= 390px) {
     font-size: 16px;
   }
 }
@@ -119,7 +119,7 @@
   margin: 4px 0;
   width: 100%;
 
-  @media (max-width: 390px) {
+  @media (width <= 390px) {
     font-size: 14px;
     line-height: 26px;
     margin: 6px 0;
