--- a/src/components/ui/BigTopicButton/BigTopicButton.module.scss
+++ b/src/components/ui/BigTopicButton/BigTopicButton.module.scss
@@ -1,7 +1,8 @@
-@import "../../../styles/variables";
+@import '../../../styles/variables';
 
 .bigTopicButton {
   @include font(20px, 32px, 400);
+
   display: block;
   width: 240px;
   min-height: 36px;
@@ -21,6 +22,7 @@
 
   &__mainText {
     @include font(28px, 28px, 400);
+
     margin: 0;
     min-height: 32px;
     padding-top: 20px;
@@ -34,7 +36,7 @@
     color: $color-font-grey;
   }
 
-  &:after {
+  &::after {
     position: absolute;
     content: '';
     top: 0;
@@ -47,28 +49,25 @@
     border-radius: 20px;
   }
 
-  &:hover:after {
+  &:hover::after {
     width: 100%;
     cursor: pointer;
   }
 }
 
-@media screen and (max-width: 870px) {
-
+@media screen and (width <= 870px) {
   .bigTopicButton {
     margin: 10px auto 0;
   }
 }
 
-@media screen and (max-width: 660px) {
-
+@media screen and (width <= 660px) {
   .bigTopicButton {
     width: 380px;
   }
 }
 
-@media screen and (max-width: 420px) {
-
+@media screen and (width <= 420px) {
   .bigTopicButton {
     width: 280px;
   }
