--- a/src/components/ui/TrainButton/TrainButton.module.scss
+++ b/src/components/ui/TrainButton/TrainButton.module.scss
@@ -1,7 +1,8 @@
-@import "../../../styles/variables";
+@import '../../../styles/variables';
 
 .trainButton {
   @include font(20px, 32px, 400);
+
   display: block;
   min-width: 240px;
   min-height: 36px;
@@ -20,7 +21,7 @@
   border: 0.5px solid $color-border-grey;
   flex-grow: 1;
 
-  &:after {
+  &::after {
     position: absolute;
     content: '';
     top: 0;
@@ -33,7 +34,7 @@
     border-radius: 20px;
   }
 
-  &:hover:after {
+  &:hover::after {
     width: 100%;
     cursor: pointer;
   }
@@ -41,6 +42,7 @@
 
 .trainButton__disabled {
   @include font(20px, 32px, 400);
+
   display: block;
   min-width: 240px;
   min-height: 36px;
